UX fix for alignment of image and job description in job details page

--- a/src/app/views/job-details/job-details.component.scss
+++ b/src/app/views/job-details/job-details.component.scss
@@ -87,11 +87,11 @@
 
 .job-status-text {
   font-weight: 300;
-  text-align: right;
+  text-align: left;;
 }
 
 .job-status-salary-text {
-  text-align: right;
+  text-align: left;
 }
 
 .sign-or-create-text {
